# stm32f1xx-template

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt
cmake/: board.cmake  flags.cmake  options.cmake  toolchain.cmake
core/: CMakeLists.txt
include/: init.h  main.h  stm32_assert.h  stm32f1xx_it.h
src/: main.c  stm32f1xx_it.c
src/init/: core.c  gpio.c  usbcdc.c
