cmake_path(GET CMAKE_CURRENT_LIST_DIR FILENAME TARGET_NAME)

set(BIN_TARGET ${TARGET_NAME}.bin)
set(HEX_TARGET ${TARGET_NAME}.hex)
set(LSS_TARGET ${TARGET_NAME}.lss)

set(EXTRA_LINK_FLAGS "-Wl,--print-memory-usage,-Map=${TARGET_NAME}.map")

file(GLOB_RECURSE APP_SOURCES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/*.s)

message(STATUS ${CMAKE_CURRENT_LIST_DIR})

add_executable(${TARGET_NAME} ${APP_SOURCES})
target_link_libraries(${TARGET_NAME} PUBLIC stm32hal core)
target_link_libraries(${TARGET_NAME} PRIVATE -T${LINKER_SCRIPT} ${EXTRA_LINK_FLAGS})
target_include_directories(${TARGET_NAME} PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)

add_custom_command(TARGET ${TARGET_NAME} POST_BUILD
  COMMAND ${CMAKE_OBJCOPY} -Oihex $<TARGET_FILE:${TARGET_NAME}> ${HEX_TARGET}
  COMMAND ${CMAKE_OBJCOPY} -Obinary $<TARGET_FILE:${TARGET_NAME}> ${BIN_TARGET}
  COMMAND ${CMAKE_OBJDUMP} -S $<TARGET_FILE:${TARGET_NAME}> > ${LSS_TARGET}
  COMMENT "Generating ${BIN_TARGET}, ${HEX_TARGET}, ${LSS_TARGET}")
